# viskit-studio

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  config.yaml.example  docker-compose.build.yml  docker-compose.yml  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/workflows/: ci.yml  docker.yml  release.yml
.omc/: prd.json  progress.txt  project-memory.json
.omc/plans/: aishop-studio-v1-architect-review.md  aishop-studio-v1-critic-verdict.md  aishop-studio-v1-plan.md  epic-0-handoff.md  epic-0-verification.md  open-questions.md
.omc/research/: chinese-text-fail-rate-spike.md  epic-4a-cost-probe.md
.omc/sessions/: 2d12c5ec-97e3-4408-aa4c-19fa7c59e143.json  5138957e-3faa-4cbc-8d44-72633a1245df.json  59c0679b-6dc2-45f7-86c8-1a2e659d13b5.json  608f7d9d-6929-47fb-ad15-d699d7e47034.json  9ba8f07f-9058-4d57-9eca-5879637aa680.json  bd8fce1f-fe88-4ee3-b4e6-42e7d4121941.json  c46475fb-68fc-45e9-b1d9-981c3f913044.json  d7d83a6d-01b8-49d5-9b45-d4253fa13fcd.json
demo/: app.css  app.jsx  components.jsx  dashboard.jsx  index.html  kit-detail.jsx  landing.html  onboarding.html  providers.jsx  tokens.css
fixtures/: bestsellers_sample.csv  templates.json
infra/: docker-compose.yml
scripts/: grep_providers.sh  grep_radix_surface.sh  ingest_corpus.py  migrate.py  probe_epic_4a.py  seed_dashboard_fixtures.py  seed_sample_kit.py  seed_user.py  spike_chinese_fail_rate.py
tests/: test_api_sqlite_runtime_regressions.py  test_editor_phase0_guardrails.py  test_output_plan_orchestrator.py
(+532 files in other folders)
